infra/k8s/answer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: answer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: answer
  template:
    metadata:
      labels:
        app: answer
    spec:
      containers:
      - name: answer
        image: us.gcr.io/student-hub-381513/answer
        # image: htekeste/answer
---
apiVersion: v1
kind: Service
metadata:
  name: answer-srv
spec:
  selector:
    app: answer
  ports:
  - port: 4008
    targetPort: 4008
    name: answer-port
    protocol: TCP
