infra/k8s/answer-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: answer-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: answer-mongo
  template:
    metadata:
      labels:
        app: answer-mongo
    spec:
      containers:
      - name: answer-mongo
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: answer-mongo-srv
spec:
  selector:
    app: answer-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
