infra/k8s/blog-feed-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-feed-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-feed
  template:
    metadata:
      labels:
        app: blog-feed
    spec:
      containers:
      - name: blog-feed
        image: us.gcr.io/student-hub-381513/blog-feed
        # image: htekeste/blog-feed
---
apiVersion: v1
kind: Service
metadata:
  name: blog-feed-srv
spec:
  selector:
    app: blog-feed
  ports:
  - port: 4008
    targetPort: 4008
    name: blog-feed-port
    protocol: TCP
