infra/k8s/blog-post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-post
  template:
    metadata:
      labels:
        app: blog-post
    spec:
      containers:
      - name: blog-post
        image: htekeste/blog-post
---
apiVersion: v1
kind: Service
metadata:
  name: blog-post-srv
spec:
  selector:
    app: blog-post
  ports:
  - port: 4006
    targetPort: 4006
    name: blog-post-port
    protocol: TCP
