infra/k8s/book-comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-comment
  template:
    metadata:
      labels:
        app: book-comment
    spec:
      containers:
        - name: book-comment
          image: us.gcr.io/student-hub-381513/book-comment
---
apiVersion: v1
kind: Service
metadata:
  name: book-comment-srv
spec:
  selector:
    app: book-comment
  ports:
    - name: book-comment
      protocol: TCP
      port: 3002
      targetPort: 3002
