infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
      - name: comment
        image: us.gcr.io/student-hub-381513/comment
---
apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec:
  selector:
    app: comment
  ports:
  - port: 4007
    targetPort: 4007
    name: comment-port
    protocol: TCP
