infra/k8s/comment-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-mongo
  template:
    metadata:
      labels:
        app: comment-mongo
    spec:
      containers:
      - name: comment-mongo
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: comment-mongo-srv
spec:
  selector:
    app: comment-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
