infra/k8s/elastic-search-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:8.6.2
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-srv
spec:
  selector:
    app: elasticsearch
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  - name: transport
    port: 9300
    targetPort: 9300
