infra/k8s/exchange-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
      - name: exchange
        image: us.gcr.io/student-hub-381513/exchange
---
apiVersion: v1
kind: Service
metadata:
  name: exchange-srv
spec:
  selector:
    app: exchange
  ports:
  - name: exchange
    protocol: TCP
    port: 3004
    targetPort: 3004
