infra/k8s/exchange-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-mongo-depl
spec:
  selector:
    matchLabels:
      app: exchange-mongo
  template:
    metadata:
      labels:
        app: exchange-mongo
    spec:
      containers:
      - name: exchange-mongo
        image: mongo:4.4.18
---
apiVersion: v1
kind: Service
metadata:
  name: exchange-mongo-srv
spec:
  selector:
    app: exchange-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
