infra/k8s/profile-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - name: profile
        image: htekeste/profile
---
apiVersion: v1
kind: Service
metadata:
  name: profile-srv
spec:
  selector:
    app: profile
  ports:
  - port: 4001
    targetPort: 4001
    name: profile-port
    protocol: TCP
