infra/k8s/project-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: htekeste/project
---
apiVersion: v1
kind: Service
metadata:
  name: project-srv
spec:
  selector:
    app: project
  ports:
    - port: 4003
      targetPort: 4003
      name: project-port
      protocol: TCP
