infra/k8s/project-feed-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-feed-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-feed
  template:
    metadata:
      labels:
        app: project-feed
    spec:
      containers:
        - name: project-feed
          image: us.gcr.io/student-hub-381513/project-feed
          # image: htekeste/project-feed
---
apiVersion: v1
kind: Service
metadata:
  name: project-feed-srv
spec:
  selector:
    app: project-feed
  ports:
    - port: 4004
      targetPort: 4004
      name: project-feed-port
      protocol: TCP
