infra/k8s/question-feed-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-feed-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-feed
  template:
    metadata:
      labels:
        app: question-feed
    spec:
      containers:
        - name: question-feed
          image: us.gcr.io/student-hub-381513/question-feed
          # image: htekeste/question-feed
---
apiVersion: v1
kind: Service
metadata:
  name: question-feed-srv
spec:
  selector:
    app: question-feed
  ports:
    - port: 6000
      targetPort: 6000
      name: question-feed-port
      protocol: TCP
