infra/k8s/question-feed-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-feed-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-feed-mongo
  template:
    metadata:
      labels:
        app: question-feed-mongo
    spec:
      containers:
      - name: question-feed-mongo
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: question-feed-mongo-srv
spec:
  selector:
    app: question-feed-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
