infra/k8s/question-post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-post
  template:
    metadata:
      labels:
        app: question-post
    spec:
      containers:
      - name: question-post
        image: us.gcr.io/student-hub-381513/question-post
        # image: htekeste/question-post
---
apiVersion: v1
kind: Service
metadata:
  name: question-post-srv
spec:
  selector:
    app: question-post
  ports:
  - port: 4009
    targetPort: 4009
    name: question-post-port
    protocol: TCP
