infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: studenthub.dev
      http:
        paths:
          - pathType: Prefix
            path: "/api/users/?(.*)"
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/api/profiles/?(.*)"
            backend:
              service:
                name: profile-srv
                port:
                  number: 4001
          - pathType: Prefix
            path: "/api/applications/?(.*)"
            backend:
              service:
                name: application-srv
                port:
                  number: 4005
          - pathType: Prefix
            path: "/api/comments/?(.*)"
            backend:
              service:
                name: comment-srv
                port:
                  number: 4007
          - pathType: Prefix
            path: "/api/projects/?(.*)"
            backend:
              service:
                name: project-srv
                port:
                  number: 4003
          - pathType: Prefix
            path: "/api/blogs/?(.*)"
            backend:
              service:
                name: blog-post-srv
                port:
                  number: 4006
          - pathType: Prefix
            path: "/api/projectfeed/?(.*)"
            backend:
              service:
                name: project-feed-srv
                port:
                  number: 4004
          - pathType: Prefix
            path: "/api/blogFeed/?(.*)"
            backend:
              service:
                name: blog-feed-srv
                port:
                  number: 4008
          - pathType: Prefix
            path: "/api/questions/?(.*)"
            backend:
              service:
                name: question-post-srv
                port:
                  number: 4009
          - pathType: Prefix
            path: "/api/answers/?(.*)"
            backend:
              service:
                name: answer-srv
                port:
                  number: 4008
          - pathType: Prefix
            path: "/api/booki/?(.*)"
            backend:
              service:
                name: book-srv
                port: 
                  number: 3001
          - pathType: Prefix
            path: "/api/book-comment/?(.*)"
            backend:
              service:
                name: book-comment-srv
                port: 
                  number: 3002
          - pathType: Prefix
            path: "/api/query/?(.*)"
            backend:
              service:
                name: query-srv
                port: 
                  number: 3003
          - pathType: Prefix
            path: "/api/bid/?(.*)"
            backend:
              service:
                name: exchange-srv
                port: 
                  number: 3004
        # - pathType: Prefix
        #   path: "/?(.*)"
        #   backend:
        #     service:
        #       name: client-srv
        #       port:
        #         number: 3000
